MDEV-23199	page_compression flag is missing for full_crc32 tablespace

During recovery, InnoDB doesn't set page_compression flag for full_crc32
format. It leads to page validiation failure while loading the index page.
fsp_flags_try_adjust() should read page0 if there is mismatch in fsp_flags
and set the appropriate fsp_flag.